force-app/main/default/objects/Success_Coach_Mapping__c/Success_Coach_Mapping__c.object-meta.xml
<CustomObject>
    <description>This object matches First Year Success Success Coaches to a Student Group and supervisor. This is used for SMS Magic configuration and out of office routing.</description>
    <label>Success Coach Mapping</label>
    <nameField>
        <displayFormat>SCM-{000000000}</displayFormat>
        <label>Success Coach Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Coach Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>