force-app/main/default/objects/Success_Coach_Mapping__c/fields/PeopleSoft_Student_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Student_Group_Code__c</fullName>
    <description>PeopleSoft Student Group Code for a given Success Coach</description>
    <label>PeopleSoft Student Group Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>