force-app/main/default/objects/Success_Coach_Mapping__c/fields/Success_Coach__c.field-meta.xml
<CustomField>
    <fullName>Success_Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Success Coach's Salesforce User</description>
    <inlineHelpText>This is the Success Coach's Salesforce User</inlineHelpText>
    <label>Success Coach</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Success_Coach_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>