force-app/main/default/objects/Success_Coach_Mapping__c/fields/Success_Coach_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Success_Coach_Queue_Name__c</fullName>
    <formula>IF( Success_Coach__r.IsActive , Success_Coach__r.ASURITE_for_External_ID__c+'_SMS', Null)</formula>
    <label>Success Coach Queue Name</label>
    <type>Text</type>
</CustomField>