force-app/main/default/objects/Success_Coach_Mapping__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The success coach supervisor; this is the user that will be used in routing SMS Magic text messages when coach is out of the office/offline.</description>
    <inlineHelpText>The success coach supervisor; this is the user that will be used in routing SMS Magic text messages when coach is out of the office/offline.</inlineHelpText>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Success_Coach_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>