force-app/main/default/objects/Success_Coach_Mapping__c/fields/Supervisor_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Queue_Name__c</fullName>
    <formula>IF( Supervisor__r.IsActive , Supervisor__r.ASURITE_for_External_ID__c+'_SMS', Null)</formula>
    <label>Supervisor Queue Name</label>
    <type>Text</type>
</CustomField>