force-app/main/default/objects/Success_Coach_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Success_Coach__c</columns>
    <columns>PeopleSoft_Student_Group_Code__c</columns>
    <columns>Supervisor__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Success_Coach_Queue_Name__c</columns>
    <columns>Supervisor_Queue_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>